--- a/docs/structured_data_classification_from_scratch_loop.ipynb
+++ b/docs/structured_data_classification_from_scratch_loop.ipynb
@@ -445,17 +445,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Use function\n",
-        "train_ds = dataframe_to_dataset(train_dataframe)\n",
-        "val_ds = dataframe_to_dataset(val_dataframe)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -522,6 +511,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Use function\n",
+        "train_ds = dataframe_to_dataset(train_dataframe)\n",
+        "val_ds = dataframe_to_dataset(val_dataframe)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Ccngwlq_b_vr"
       },
@@ -551,20 +551,24 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Next, we define utility functions to do the feature preprocessing operations."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
         "\n",
         "### Preprocessing functions\n",
         "\n",
-        "- Below, we define utility functions to do the feature preprocessing operations:\n",
-        "\n",
-        "- For each numeric feature in the dataset, you will use a tf.keras.layers.Normalization layer to standardize the distribution of the data.\n",
         "\n",
         "- Define a new utility function that returns a layer which applies feature-wise normalization to numerical features using that Keras preprocessing layer:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "id": "cPnUDwDwb_vs"
       },
@@ -572,6 +576,7 @@
       "source": [
         "# Define numerical preprocessing function\n",
         "def get_normalization_layer(name, dataset):\n",
+        "    \n",
         "    # Create a Normalization layer for our feature\n",
         "    normalizer = layers.Normalization(axis=None)\n",
         "\n",
@@ -583,6 +588,42 @@
         "\n",
         "    # Normalize the input feature\n",
         "    return normalizer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Define another new utility function that returns a layer which maps values from a vocabulary to integer indices and multi-hot encodes the features using the tf.keras.layers.StringLookup, tf.keras.layers.IntegerLookup, and tf.keras.CategoryEncoding preprocessing layers:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def get_category_encoding_layer(name, dataset, dtype, max_tokens=None):\n",
+        "  \n",
+        "  # Create a layer that turns strings into integer indices.\n",
+        "  if dtype == 'string':\n",
+        "    index = layers.StringLookup(max_tokens=max_tokens)\n",
+        "  # Otherwise, create a layer that turns integer values into integer indices.\n",
+        "  else:\n",
+        "    index = layers.IntegerLookup(max_tokens=max_tokens)\n",
+        "\n",
+        "  # Prepare a `tf.data.Dataset` that only yields the feature.\n",
+        "  feature_ds = dataset.map(lambda x, y: x[name])\n",
+        "\n",
+        "  # Learn the set of possible values and assign them a fixed integer index.\n",
+        "  index.adapt(feature_ds)\n",
+        "\n",
+        "  # Encode the integer indices.\n",
+        "  encoder = layers.CategoryEncoding(num_tokens=index.vocabulary_size())\n",
+        "\n",
+        "  # Apply multi-hot encoding to the indices. The lambda function captures the\n",
+        "  # layer, so you can use them, or include them in the Keras Functional model later.\n",
+        "  return lambda feature: encoder(index(feature))"
       ]
     },
     {
@@ -634,44 +675,6 @@
         "photo_count_col = train_features['PhotoAmt']\n",
         "layer = get_normalization_layer('PhotoAmt', train_ds)\n",
         "layer(photo_count_col)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Define another new utility function that returns a layer which maps values from a vocabulary to integer indices and multi-hot encodes the features using the tf.keras.layers.StringLookup, tf.keras.layers.IntegerLookup, and tf.keras.CategoryEncoding preprocessing layers:\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def get_category_encoding_layer(name, dataset, dtype, max_tokens=None):\n",
-        "  \n",
-        "  # Create a layer that turns strings into integer indices.\n",
-        "  if dtype == 'string':\n",
-        "    index = layers.StringLookup(max_tokens=max_tokens)\n",
-        "  # Otherwise, create a layer that turns integer values into integer indices.\n",
-        "  else:\n",
-        "    index = layers.IntegerLookup(max_tokens=max_tokens)\n",
-        "\n",
-        "  # Prepare a `tf.data.Dataset` that only yields the feature.\n",
-        "  feature_ds = dataset.map(lambda x, y: x[name])\n",
-        "\n",
-        "  # Learn the set of possible values and assign them a fixed integer index.\n",
-        "  index.adapt(feature_ds)\n",
-        "\n",
-        "  # Encode the integer indices.\n",
-        "  encoder = layers.CategoryEncoding(num_tokens=index.vocabulary_size())\n",
-        "\n",
-        "  # Apply multi-hot encoding to the indices. The lambda function captures the\n",
-        "  # layer, so you can use them, or include them in the Keras Functional model later.\n",
-        "  return lambda feature: encoder(index(feature))"
       ]
     },
     {
