--- a/docs/structured_data_classification_from_scratch_loop.ipynb
+++ b/docs/structured_data_classification_from_scratch_loop.ipynb
@@ -426,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 65,
       "metadata": {
         "id": "NXclBW3Cb_vq"
       },
@@ -434,10 +434,12 @@
       "source": [
         "# Define a function to create our tensors\n",
         "\n",
-        "def dataframe_to_dataset(dataframe, batch_size=32):\n",
+        "def dataframe_to_dataset(dataframe, shuffle=True, batch_size=32):\n",
         "    df = dataframe.copy()\n",
         "    labels = df.pop(y_label)\n",
         "    ds = tf.data.Dataset.from_tensor_slices((dict(df), labels))\n",
+        "    if shuffle:\n",
+        "        ds = ds.shuffle(buffer_size=len(dataframe))\n",
         "    ds = ds.shuffle(buffer_size=len(dataframe))\n",
         "    ds = ds.batch(batch_size)\n",
         "    df = ds.prefetch(batch_size)\n",
@@ -509,36 +511,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Use function\n",
-        "train_ds = dataframe_to_dataset(train_dataframe)\n",
-        "val_ds = dataframe_to_dataset(val_dataframe)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Ccngwlq_b_vr"
-      },
-      "outputs": [],
-      "source": [
-        "train_ds = train_ds.batch(32)\n",
-        "val_ds = val_ds.batch(32)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "AWVbzdlob_vs"
@@ -551,17 +523,24 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Next, we define utility functions to do the feature preprocessing operations."
+        "- Next, we define utility functions to do the feature preprocessing operations.\n",
+        "\n",
+        "In this tutorial, you will use the following preprocessing layers to demonstrate how to perform preprocessing, structured data encoding, and feature engineering:\n",
+        "\n",
+        "- tf.keras.layers.Normalization: Performs feature-wise normalization of input features.\n",
+        "\n",
+        "- tf.keras.layers.CategoryEncoding: Turns integer categorical features into one-hot, multi-hot, or tf-idf dense representations.\n",
+        "\n",
+        "- tf.keras.layers.StringLookup: Turns string categorical values into integer indices.\n",
+        "\n",
+        "- tf.keras.layers.IntegerLookup: Turns integer categorical values into integer indices.\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n",
-        "\n",
-        "### Preprocessing functions\n",
-        "\n",
+        "### Numerical preprocessing function\n",
         "\n",
         "- Define a new utility function that returns a layer which applies feature-wise normalization to numerical features using that Keras preprocessing layer:"
       ]
@@ -594,12 +573,52 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "- Next, test the new function by calling it on the total uploaded pet photo features to normalize 'PhotoAmt':"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5,), dtype=float32, numpy=\n",
+              "array([-1.0903668, -1.542778 , -1.7689835,  1.1716888,  1.6241   ],\n",
+              "      dtype=float32)>"
+            ]
+          },
+          "execution_count": 62,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "test_age_feature = train_features['age']\n",
+        "\n",
+        "test_age_layer = get_normalization_layer('age', train_ds)\n",
+        "\n",
+        "test_age_layer(test_age_feature)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Categorical preprocessing functions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "- Define another new utility function that returns a layer which maps values from a vocabulary to integer indices and multi-hot encodes the features using the tf.keras.layers.StringLookup, tf.keras.layers.IntegerLookup, and tf.keras.CategoryEncoding preprocessing layers:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -630,71 +649,71 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Categorical data preprocessing"
+        "- Test the get_category_encoding_layer function by calling it on pet 'Thal' features to turn them into multi-hot encoded tensors:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(6,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 0.], dtype=float32)>"
+            ]
+          },
+          "execution_count": 63,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Define categorical preprocessing function\n",
-        "def encode_categorical_feature(feature, name, dataset, is_string):\n",
+        "test_thal_feature = train_features['thal']\n",
         "\n",
-        "    lookup_class = layers.StringLookup if is_string else layers.IntegerLookup\n",
-        "    # Create a lookup layer which will turn strings into integer indices\n",
-        "    lookup = lookup_class(output_mode=\"binary\")\n",
-        "\n",
-        "    # Prepare a Dataset that only yields our feature\n",
-        "    feature_ds = dataset.map(lambda x, y: x[name])\n",
-        "    feature_ds = feature_ds.map(lambda x: tf.expand_dims(x, -1))\n",
-        "\n",
-        "    # Learn the set of possible string values and assign them a fixed integer index\n",
-        "    lookup.adapt(feature_ds)\n",
-        "\n",
-        "    # Turn the string input into integer indices\n",
-        "    encoded_feature = lookup(feature)\n",
-        "    return encoded_feature\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- Next, test the new function by calling it on the total uploaded pet photo features to normalize 'PhotoAmt':\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "photo_count_col = train_features['PhotoAmt']\n",
-        "layer = get_normalization_layer('PhotoAmt', train_ds)\n",
-        "layer(photo_count_col)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- Test the `get_category_encoding_layer` function by calling it on pet 'sex' feature to turn them into multi-hot encoded tensors:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "test_type_col = train_features['Type']\n",
-        "test_type_layer = get_category_encoding_layer(name='Type',\n",
+        "test_thal_layer = get_category_encoding_layer(name='thal',\n",
         "                                              dataset=train_ds,\n",
         "                                              dtype='string')\n",
-        "test_type_layer(test_type_col)"
+        "test_thal_layer(test_thal_feature)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Data preprocessing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YWxgxJc1b_vt"
+      },
+      "source": [
+        "Next, we will:\n",
+        "\n",
+        "- Apply the preprocessing utility functions defined earlier on our numerical and categorical features \n",
+        "- Add all the feature inputs to a list."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Earlier, we used a small batch size to demonstrate the input pipeline. \n",
+        "- Let's now create a new input pipeline with a larger batch size of 256:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 66,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "batch_size = 256\n",
+        "\n",
+        "ds_train = dataframe_to_dataset(df_train, shuffle=True, batch_size=batch_size)\n",
+        "ds_val = dataframe_to_dataset(df_val, shuffle=True, batch_size=batch_size)\n"
       ]
     },
     {
@@ -705,13 +724,32 @@
       "source": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YWxgxJc1b_vt"
-      },
-      "source": [
-        "With this done, we can create our preprocessing steps:"
-      ]
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
