--- a/docs/structured_data_classification_from_scratch_loop.ipynb
+++ b/docs/structured_data_classification_from_scratch_loop.ipynb
@@ -55,7 +55,14 @@
         "id": "RzNNij6qb_vl"
       },
       "source": [
-        "## Data\n",
+        "## Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
         "\n",
         "\n",
         "Here's the description of each feature:\n",
@@ -75,10 +82,22 @@
         "Slope | Slope of the peak exercise ST segment | Numerical\n",
         "CA | Number of major vessels (0-3) colored by fluoroscopy | Both numerical & categorical\n",
         "Thal | normal; fixed defect; reversible defect | Categorical (string)\n",
-        "Target | Diagnosis of heart disease (1 = true; 0 = false) | Target\n",
+        "Target | Diagnosis of heart disease (1 = true; 0 = false) | Target"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Data import"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
-        "### Data import\n",
-        "Let's download the data and load it into a Pandas dataframe:"
+        "- Let's download the data and load it into a Pandas dataframe:"
       ]
     },
     {
@@ -254,9 +273,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 303 entries, 0 to 302\n",
+            "Data columns (total 14 columns):\n",
+            " #   Column    Non-Null Count  Dtype   \n",
+            "---  ------    --------------  -----   \n",
+            " 0   age       303 non-null    int32   \n",
+            " 1   sex       303 non-null    category\n",
+            " 2   cp        303 non-null    category\n",
+            " 3   trestbps  303 non-null    int32   \n",
+            " 4   chol      303 non-null    int32   \n",
+            " 5   fbs       303 non-null    category\n",
+            " 6   restecg   303 non-null    category\n",
+            " 7   thalach   303 non-null    int32   \n",
+            " 8   exang     303 non-null    category\n",
+            " 9   oldpeak   303 non-null    float32 \n",
+            " 10  slope     303 non-null    int32   \n",
+            " 11  ca        303 non-null    category\n",
+            " 12  thal      303 non-null    string  \n",
+            " 13  target    303 non-null    int32   \n",
+            "dtypes: category(6), float32(1), int32(6), string(1)\n",
+            "memory usage: 13.5 KB\n"
+          ]
+        }
+      ],
       "source": [
         "df.info()"
       ]
@@ -297,7 +344,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Initial data preparation"
+        "### Define label"
       ]
     },
     {
@@ -320,12 +367,41 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Correct data format"
+        "### Data format"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Change data format if necessary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Due to performance resons we change \n",
+        "  - int.64 to int.32\n",
+        "  - float.64 to float.32 "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "int_32 = dict.fromkeys(df.select_dtypes(np.int64).columns, np.int32)\n",
+        "df = df.astype(int_32)\n",
+        "\n",
+        "float_32 = dict.fromkeys(df.select_dtypes(np.float64).columns, np.float32)\n",
+        "df = df.astype(float_32)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -335,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -355,15 +431,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 90,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Make list of all numerical data (except label)\n",
         "list_num = df.drop(columns=[y_label]).select_dtypes(include=[np.number]).columns.tolist()\n",
         "\n",
-        "# Make list of all categorical data (except label)\n",
-        "list_cat = df.drop(columns=[y_label]).select_dtypes(include=['category']).columns.tolist()"
+        "# Make list of all categorical data which is stored as integers (except label)\n",
+        "list_cat_int = df.drop(columns=[y_label]).select_dtypes(include=['category']).columns.tolist()\n",
+        "\n",
+        "# Make list of all categorical data which is stored as string (except label)\n",
+        "list_cat_string = df.drop(columns=[y_label]).select_dtypes(include=['string']).columns.tolist()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 303 entries, 0 to 302\n",
+            "Data columns (total 14 columns):\n",
+            " #   Column    Non-Null Count  Dtype   \n",
+            "---  ------    --------------  -----   \n",
+            " 0   age       303 non-null    int32   \n",
+            " 1   sex       303 non-null    category\n",
+            " 2   cp        303 non-null    category\n",
+            " 3   trestbps  303 non-null    int32   \n",
+            " 4   chol      303 non-null    int32   \n",
+            " 5   fbs       303 non-null    category\n",
+            " 6   restecg   303 non-null    category\n",
+            " 7   thalach   303 non-null    int32   \n",
+            " 8   exang     303 non-null    category\n",
+            " 9   oldpeak   303 non-null    float64 \n",
+            " 10  slope     303 non-null    int32   \n",
+            " 11  ca        303 non-null    category\n",
+            " 12  thal      303 non-null    string  \n",
+            " 13  target    303 non-null    int32   \n",
+            "dtypes: category(6), float64(1), int32(6), string(1)\n",
+            "memory usage: 14.6 KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
       ]
     },
     {
@@ -377,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 80,
       "metadata": {
         "id": "OFSnqGOPb_vp"
       },
@@ -389,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 81,
       "metadata": {},
       "outputs": [
         {
@@ -426,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 82,
       "metadata": {
         "id": "NXclBW3Cb_vq"
       },
@@ -455,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -473,7 +589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
@@ -481,8 +597,8 @@
           "output_type": "stream",
           "text": [
             "Every feature: ['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach', 'exang', 'oldpeak', 'slope', 'ca', 'thal']\n",
-            "A batch of ages: tf.Tensor([45 41 39 65 69], shape=(5,), dtype=int64)\n",
-            "A batch of targets: tf.Tensor([0 0 0 1 1], shape=(5,), dtype=int64)\n"
+            "A batch of ages: tf.Tensor([64 62 46 61 66], shape=(5,), dtype=int32)\n",
+            "A batch of targets: tf.Tensor([0 1 0 1 1], shape=(5,), dtype=int32)\n"
           ]
         }
       ],
@@ -547,7 +663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 85,
       "metadata": {
         "id": "cPnUDwDwb_vs"
       },
@@ -578,18 +694,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(5,), dtype=float32, numpy=\n",
-              "array([-1.0903668, -1.542778 , -1.7689835,  1.1716888,  1.6241   ],\n",
+              "array([ 1.0585865,  0.8323809, -0.9772636,  0.7192781,  1.2847921],\n",
               "      dtype=float32)>"
             ]
           },
-          "execution_count": 62,
+          "execution_count": 86,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -618,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -654,7 +770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [
         {
@@ -663,7 +779,7 @@
               "<tf.Tensor: shape=(6,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 0.], dtype=float32)>"
             ]
           },
-          "execution_count": 63,
+          "execution_count": 88,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -692,8 +808,25 @@
       "source": [
         "Next, we will:\n",
         "\n",
-        "- Apply the preprocessing utility functions defined earlier on our numerical and categorical features \n",
-        "- Add all the feature inputs to a list."
+        "- Apply the preprocessing utility functions defined earlier on our numerical and categorical features and store it into `encoded_features`\n",
+        "- Add all the feature inputs to a list called `all_inputs`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 92,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "all_inputs = []\n",
+        "encoded_features = []"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Create tensors "
       ]
     },
     {
@@ -705,75 +838,26 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 66,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "batch_size = 256\n",
-        "\n",
-        "ds_train = dataframe_to_dataset(df_train, shuffle=True, batch_size=batch_size)\n",
-        "ds_val = dataframe_to_dataset(df_val, shuffle=True, batch_size=batch_size)\n"
+        "#### Numerical preprocessing"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Normalize the numerical features and add them to one list of inputs called `encoded_features`:"
+        "- Normalize the numerical features \n",
+        "- Add them to one list of inputs called `encoded_features`:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [],
       "source": [
-        "all_inputs = []\n",
-        "encoded_features = []\n",
-        "\n",
         "# Numerical features.\n",
         "for feature in list_num:\n",
         "  numeric_col = keras.Input(shape=(1,), name=feature)\n",
@@ -784,13 +868,94 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Categorical preprocessing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Turn the integer categorical values from the dataset into integer indices, perform multi-hot encoding and add the resulting feature inputs to encoded_feature"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "encoded_features"
+        "age_col = tf.keras.Input(shape=(1,), name='Age', dtype='int64')\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "encoding_layer = get_category_encoding_layer(name='Age',\n",
+        "                                             dataset=train_ds,\n",
+        "                                             dtype='int64',\n",
+        "                                             max_tokens=5)\n",
+        "encoded_age_col = encoding_layer(age_col)\n",
+        "all_inputs.append(age_col)\n",
+        "encoded_features.append(encoded_age_col)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "categorical_cols = ['Type', 'Color1', 'Color2', 'Gender', 'MaturitySize',\n",
+        "                    'FurLength', 'Vaccinated', 'Sterilized', 'Health', 'Breed1']\n",
+        "\n",
+        "for feature in list_cat_string:\n",
+        "  categorical_col = tf.keras.Input(shape=(1,), name=feature, dtype='string')\n",
+        "  encoding_layer = get_category_encoding_layer(name=feature,\n",
+        "                                               dataset=train_ds,\n",
+        "                                               dtype='string',\n",
+        "                                               max_tokens=5)\n",
+        "  encoded_categorical_col = encoding_layer(categorical_col)\n",
+        "  all_inputs.append(categorical_col)\n",
+        "  encoded_features.append(encoded_categorical_col)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for feature in list_cat_string:\n",
+        "  categorical_col = tf.keras.Input(shape=(1,), name=feature, dtype='string')\n",
+        "  encoding_layer = get_category_encoding_layer(name=feature,\n",
+        "                                               dataset=train_ds,\n",
+        "                                               dtype='string',\n",
+        "                                               max_tokens=5)\n",
+        "  encoded_categorical_col = encoding_layer(categorical_col)\n",
+        "  all_inputs.append(categorical_col)\n",
+        "  encoded_features.append(encoded_categorical_col)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
