--- a/docs/structured_data_classification_from_scratch_loop.ipynb
+++ b/docs/structured_data_classification_from_scratch_loop.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 120,
       "metadata": {
         "id": "aubhVbfWb_vk"
       },
@@ -33,7 +33,7 @@
               "'2.7.1'"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 120,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 121,
       "metadata": {
         "id": "EId7MS20b_vm"
       },
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 122,
       "metadata": {
         "id": "zW3GlXdWb_vo"
       },
@@ -262,7 +262,7 @@
               "4   0      normal       0  "
             ]
           },
-          "execution_count": 44,
+          "execution_count": 122,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -273,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [
         {
@@ -283,24 +283,24 @@
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 303 entries, 0 to 302\n",
             "Data columns (total 14 columns):\n",
-            " #   Column    Non-Null Count  Dtype   \n",
-            "---  ------    --------------  -----   \n",
-            " 0   age       303 non-null    int32   \n",
-            " 1   sex       303 non-null    category\n",
-            " 2   cp        303 non-null    category\n",
-            " 3   trestbps  303 non-null    int32   \n",
-            " 4   chol      303 non-null    int32   \n",
-            " 5   fbs       303 non-null    category\n",
-            " 6   restecg   303 non-null    category\n",
-            " 7   thalach   303 non-null    int32   \n",
-            " 8   exang     303 non-null    category\n",
-            " 9   oldpeak   303 non-null    float32 \n",
-            " 10  slope     303 non-null    int32   \n",
-            " 11  ca        303 non-null    category\n",
-            " 12  thal      303 non-null    string  \n",
-            " 13  target    303 non-null    int32   \n",
-            "dtypes: category(6), float32(1), int32(6), string(1)\n",
-            "memory usage: 13.5 KB\n"
+            " #   Column    Non-Null Count  Dtype  \n",
+            "---  ------    --------------  -----  \n",
+            " 0   age       303 non-null    int64  \n",
+            " 1   sex       303 non-null    int64  \n",
+            " 2   cp        303 non-null    int64  \n",
+            " 3   trestbps  303 non-null    int64  \n",
+            " 4   chol      303 non-null    int64  \n",
+            " 5   fbs       303 non-null    int64  \n",
+            " 6   restecg   303 non-null    int64  \n",
+            " 7   thalach   303 non-null    int64  \n",
+            " 8   exang     303 non-null    int64  \n",
+            " 9   oldpeak   303 non-null    float64\n",
+            " 10  slope     303 non-null    int64  \n",
+            " 11  ca        303 non-null    int64  \n",
+            " 12  thal      303 non-null    object \n",
+            " 13  target    303 non-null    int64  \n",
+            "dtypes: float64(1), int64(12), object(1)\n",
+            "memory usage: 33.3+ KB\n"
           ]
         }
       ],
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 124,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -381,27 +381,36 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Due to performance resons we change \n",
-        "  - int.64 to int.32\n",
-        "  - float.64 to float.32 "
+        "- Due to compatibility resons we need to change \n",
+        "  - int.32 to int.64\n",
+        "  - float.32 to float.64 \n",
+        "\n",
+        "- In our example, we don`t have any int.32 or float.32 but here is the function to change the data format:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 125,
       "metadata": {},
       "outputs": [],
       "source": [
-        "int_32 = dict.fromkeys(df.select_dtypes(np.int64).columns, np.int32)\n",
-        "df = df.astype(int_32)\n",
+        "int_64 = dict.fromkeys(df.select_dtypes(np.int64).columns, np.int32)\n",
+        "df = df.astype(int_64)\n",
         "\n",
-        "float_32 = dict.fromkeys(df.select_dtypes(np.float64).columns, np.float32)\n",
-        "df = df.astype(float_32)"
+        "float_64 = dict.fromkeys(df.select_dtypes(np.float64).columns, np.float32)\n",
+        "df = df.astype(float_64)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Take care of categorical data:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 126,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -411,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 127,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -431,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 128,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -447,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 129,
       "metadata": {},
       "outputs": [
         {
@@ -468,13 +477,13 @@
             " 6   restecg   303 non-null    category\n",
             " 7   thalach   303 non-null    int32   \n",
             " 8   exang     303 non-null    category\n",
-            " 9   oldpeak   303 non-null    float64 \n",
+            " 9   oldpeak   303 non-null    float32 \n",
             " 10  slope     303 non-null    int32   \n",
             " 11  ca        303 non-null    category\n",
             " 12  thal      303 non-null    string  \n",
             " 13  target    303 non-null    int32   \n",
-            "dtypes: category(6), float64(1), int32(6), string(1)\n",
-            "memory usage: 14.6 KB\n"
+            "dtypes: category(6), float32(1), int32(6), string(1)\n",
+            "memory usage: 13.5 KB\n"
           ]
         }
       ],
@@ -493,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 130,
       "metadata": {
         "id": "OFSnqGOPb_vp"
       },
@@ -505,7 +514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [
         {
@@ -542,7 +551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 132,
       "metadata": {
         "id": "NXclBW3Cb_vq"
       },
@@ -571,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 133,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -589,7 +598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 134,
       "metadata": {},
       "outputs": [
         {
@@ -597,8 +606,8 @@
           "output_type": "stream",
           "text": [
             "Every feature: ['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach', 'exang', 'oldpeak', 'slope', 'ca', 'thal']\n",
-            "A batch of ages: tf.Tensor([64 62 46 61 66], shape=(5,), dtype=int32)\n",
-            "A batch of targets: tf.Tensor([0 1 0 1 1], shape=(5,), dtype=int32)\n"
+            "A batch of ages: tf.Tensor([42 51 64 67 44], shape=(5,), dtype=int32)\n",
+            "A batch of targets: tf.Tensor([0 1 0 1 0], shape=(5,), dtype=int32)\n"
           ]
         }
       ],
@@ -663,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 135,
       "metadata": {
         "id": "cPnUDwDwb_vs"
       },
@@ -694,18 +703,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(5,), dtype=float32, numpy=\n",
-              "array([ 1.0585865,  0.8323809, -0.9772636,  0.7192781,  1.2847921],\n",
+              "array([-1.4296759 , -0.41175067,  1.0585858 ,  1.3978943 , -1.2034703 ],\n",
               "      dtype=float32)>"
             ]
           },
-          "execution_count": 86,
+          "execution_count": 136,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -734,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -770,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 138,
       "metadata": {},
       "outputs": [
         {
@@ -779,7 +788,7 @@
               "<tf.Tensor: shape=(6,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 0.], dtype=float32)>"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 138,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -814,7 +823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 139,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -854,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 140,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -886,47 +895,19 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "age_col = tf.keras.Input(shape=(1,), name='Age', dtype='int64')\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n",
-        "encoding_layer = get_category_encoding_layer(name='Age',\n",
-        "                                             dataset=train_ds,\n",
-        "                                             dtype='int64',\n",
-        "                                             max_tokens=5)\n",
-        "encoded_age_col = encoding_layer(age_col)\n",
-        "all_inputs.append(age_col)\n",
-        "encoded_features.append(encoded_age_col)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 141,
       "metadata": {},
       "outputs": [],
       "source": [
-        "categorical_cols = ['Type', 'Color1', 'Color2', 'Gender', 'MaturitySize',\n",
-        "                    'FurLength', 'Vaccinated', 'Sterilized', 'Health', 'Breed1']\n",
-        "\n",
-        "for feature in list_cat_string:\n",
-        "  categorical_col = tf.keras.Input(shape=(1,), name=feature, dtype='string')\n",
+        "for feature in list_cat_int:\n",
+        "  categorical_col = tf.keras.Input(shape=(1,), name=feature, dtype='int32')\n",
         "  encoding_layer = get_category_encoding_layer(name=feature,\n",
         "                                               dataset=train_ds,\n",
-        "                                               dtype='string',\n",
+        "                                               dtype='int32',\n",
         "                                               max_tokens=5)\n",
         "  encoded_categorical_col = encoding_layer(categorical_col)\n",
         "  all_inputs.append(categorical_col)\n",
@@ -935,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 142,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -951,40 +932,8 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
-      "source": [
-        "- Make a list of all encoded features"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "all_features = layers.concatenate(encoded_features)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- Note that we also could use a for loop to automate some of the steps above:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
       "source": [
         "## Model"
       ]
