--- a/docs/structured_data_classification_intro.ipynb
+++ b/docs/structured_data_classification_intro.ipynb
@@ -6,14 +6,9 @@
         "id": "-iNtJdvrb_vd"
       },
       "source": [
-        "# Structured data classification\n",
+        "# Structured data classification I\n",
         "\n",
-        "This tutorial is mainly based on:\n",
-        "\n",
-        "**Author:** [fchollet](https://twitter.com/fchollet)<br>\n",
-        "**Date created:** 2020/06/09<br>\n",
-        "**Last modified:** 2020/06/09<br>\n",
-        "**Description:** Binary classification of structured data including numerical and categorical features."
+        "*This tutorial is mainly based on the Keras tutorial [\"Structured data classification from scratch\"](https://keras.io/examples/structured_data/structured_data_classification_from_scratch/) by François Chollet.*"
       ]
     },
     {
@@ -1057,6 +1052,24 @@
         "    \"This particular patient had a %.1f percent probability \"\n",
         "    \"of having a heart disease, as evaluated by our model.\" % (100 * predictions[0][0],)\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Next steps"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- In this example, we used a lot of code to demonstrate the data preprocessing as simple as possible.\n",
+        "\n",
+        "- If you want to learn more about how to reduce this code by using functions, take a look at the following example which uses the same data and model:\n",
+        "\n",
+        "- ![](structured_data_classification_functions.ipynb)"
       ]
     }
   ],
