--- a/docs/keras-functional.ipynb
+++ b/docs/keras-functional.ipynb
@@ -6,7 +6,7 @@
         "id": "lARdGQ2758n2"
       },
       "source": [
-        "# Functional API\n",
+        "# Keras Functional API\n",
         "\n",
         "*This is a companion notebook for the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff) ([code provided by François Chollet](https://github.com/fchollet/deep-learning-with-python-notebooks)).* \n",
         "\n",
