--- a/docs/structured_data_classification_functions.ipynb
+++ b/docs/structured_data_classification_functions.ipynb
@@ -15,7 +15,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- The following tutorial is an advanced version of [](structured_data_classification_intro.ipynb) where we will use more functions."
+        "- This tutorial demonstrates how to do structured binary classification with Keras, starting from a raw CSV file. \n",
+        "\n",
+        "- This example is an advanced version of [](structured_data_classification_intro.ipynb) since we will use more functions and less code."
       ]
     },
     {
@@ -68,11 +70,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "Here's the description of each feature:\n",
-        "\n",
+        "- We use the features below to predict whether a patient has a heart disease (`Target`)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Column| Description| Feature Type\n",
         "------------|--------------------|----------------------\n",
         "Age | Age in years | Numerical\n",
@@ -89,38 +93,6 @@
         "CA | Number of major vessels (0-3) colored by fluoroscopy | Both numerical & categorical\n",
         "Thal | normal; fixed defect; reversible defect | Categorical (string)\n",
         "Target | Diagnosis of heart disease (1 = true; 0 = false) | Target"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "The following feature are continuous numerical features:\n",
-        "\n",
-        "- `age`\n",
-        "- `trestbps`\n",
-        "- `chol`\n",
-        "- `thalach`\n",
-        "- `oldpeak`\n",
-        "- `slope`"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "The following features are *categorical features* encoded as integers:\n",
-        "\n",
-        "- `sex`\n",
-        "- `cp`\n",
-        "- `fbs`\n",
-        "- `restecg`\n",
-        "- `exang`\n",
-        "- `ca`\n",
-        "\n",
-        "The following feature is a *categorical features* encoded as string:\n",
-        "\n",
-        "- `thal`"
       ]
     },
     {
@@ -311,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -362,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -387,7 +359,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Due to performance reasons we change: \n",
+        "- Due to computational performance reasons we change:\n",
+        " \n",
         "  - `int64` to `int32`\n",
         "  - `float64` to `float32` "
       ]
@@ -403,6 +376,7 @@
         "# Change all columns from dictionary\n",
         "df = df.astype(int_32)\n",
         "\n",
+        "# Make a dictionary with float64 columns as keys and np.float32 as values\n",
         "float_32 = dict.fromkeys(df.select_dtypes(np.float64).columns, np.float32)\n",
         "df = df.astype(float_32)"
       ]
