--- a/docs/structured_data_classification_functions.ipynb
+++ b/docs/structured_data_classification_functions.ipynb
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -403,7 +403,7 @@
               " 'target': numpy.int32}"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -416,12 +416,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Next, we take care of categorical data:"
+        "- Next, we take care of our categorical data:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -431,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "OFSnqGOPb_vp"
       },
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -554,7 +554,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Transform data to tensors"
+        "### Transform to Tensors"
       ]
     },
     {
@@ -570,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "id": "NXclBW3Cb_vq"
       },
@@ -584,7 +584,6 @@
         "    ds = tf.data.Dataset.from_tensor_slices((dict(df), labels))\n",
         "    if shuffle:\n",
         "        ds = ds.shuffle(buffer_size=len(dataframe))\n",
-        "    ds = ds.shuffle(buffer_size=len(dataframe))\n",
         "    ds = ds.batch(batch_size)\n",
         "    df = ds.prefetch(batch_size)\n",
         "    return ds"
@@ -594,81 +593,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- Next, we test our function\n",
-        "\n",
-        "- We use a small batch size to keep the output readable"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2022-04-28 18:25:53.648088: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-          ]
-        }
-      ],
-      "source": [
-        "batch_size = 5\n",
-        "\n",
-        "train_ds = dataframe_to_dataset(df_train, batch_size=batch_size)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- Let's take a look at the data:"
+        "- Next, we test our function"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 16,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Every feature: ['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach', 'exang', 'oldpeak', 'slope', 'ca', 'thal']\n",
-            "A batch of ages: tf.Tensor([60 66 68 49 54], shape=(5,), dtype=int32)\n",
-            "A batch of targets: tf.Tensor([1 1 0 0 1], shape=(5,), dtype=int32)\n"
-          ]
-        }
-      ],
-      "source": [
-        "[(train_features, label_batch)] = train_ds.take(1)\n",
-        "\n",
-        "print('Every feature:', list(train_features.keys()))\n",
-        "print('A batch of ages:', train_features['age'])\n",
-        "print('A batch of targets:', label_batch )"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "- As the output demonstrates, the training set returns a dictionary of column names (from the DataFrame) that map to column values from rows."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_2Q5DVC0b_vr"
-      },
-      "source": [
-        "- Earlier, you used a small batch size to demonstrate the input pipeline. \n",
-        "- Let's now create a new input pipeline with a larger batch size:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
