--- a/docs/structured_data_classification_intro.ipynb
+++ b/docs/structured_data_classification_intro.ipynb
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "OFSnqGOPb_vp"
       },
@@ -408,12 +408,13 @@
         }
       ],
       "source": [
-        "val_dataframe = df.sample(frac=0.2, random_state=1337)\n",
-        "train_dataframe = df.drop(val_dataframe.index)\n",
+        "df_val = df.sample(frac=0.2, random_state=1337)\n",
+        "\n",
+        "df_train = df.drop(df_val.index)\n",
         "\n",
         "print(\n",
         "    \"Using %d samples for training and %d for validation\"\n",
-        "    % (len(train_dataframe), len(val_dataframe))\n",
+        "    % (len(df_train), len(df_val))\n",
         ")"
       ]
     },
@@ -421,13 +422,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Transform to Tensors\n",
+        "### Transform to Tensors"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
-        "The [tf.data.Dataset API](https://www.tensorflow.org/api_docs/python/tf/data/Dataset) supports writing descriptive and efficient input pipelines. Dataset usage follows a common pattern:\n",
+        "- The [tf.data.Dataset API](https://www.tensorflow.org/api_docs/python/tf/data/Dataset) supports writing descriptive and efficient input pipelines. \n",
         "\n",
-        "- Create a source dataset from your input data.\n",
-        "- Apply dataset transformations to preprocess the data.\n",
-        "- Iterate over the dataset and process the elements."
+        "- Dataset usage follows a common pattern:\n",
+        "\n",
+        "  - Create a source dataset from your input data.\n",
+        "  - Apply dataset transformations to preprocess the data.\n",
+        "  - Iterate over the dataset and process the elements."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Examples"
       ]
     },
     {
@@ -456,6 +472,7 @@
       "source": [
         "# First, a simple example\n",
         "example_dataset = tf.data.Dataset.from_tensor_slices([1, 2, 3])\n",
+        "\n",
         "# Print tensor\n",
         "for element in example_dataset:\n",
         "  print(element)"
@@ -478,6 +495,7 @@
       "source": [
         "# Example with dictionary\n",
         "example_dataset = tf.data.Dataset.from_tensor_slices({\"a\":[1, 2], \"b\":[10, 11]} )\n",
+        "\n",
         "# Print tensor\n",
         "for element in example_dataset:\n",
         "  print(element)"
@@ -498,7 +516,8 @@
       ],
       "source": [
         "# How to use dictionary in combination with pandas dataframe \n",
-        "# We only use 1 patients\n",
+        "\n",
+        "# We only use 1 patient\n",
         "example_dataset = tf.data.Dataset.from_tensor_slices(dict(dataframe[0:1]))\n",
         "\n",
         "for element in example_dataset:\n",
@@ -507,11 +526,20 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Data transformation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "2B4a8d8ab_vq"
       },
       "source": [
-        "Let's generate [`tf.data.Dataset`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset) objects for our training and validation dataframes:"
+        "- Let's generate [`tf.data.Dataset`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset) objects for our training and validation dataframes.\n",
+        "\n",
+        "- The following utility function converts each training and validation set into a tf.data.Dataset, then shuffles and batches the data."
       ]
     },
     {
@@ -523,23 +551,101 @@
       "outputs": [],
       "source": [
         "# Define a function to create our tensors\n",
-        "def dataframe_to_dataset(dataframe):\n",
-        "    dataframe = dataframe.copy()\n",
-        "    labels = dataframe.pop(\"target\")\n",
-        "    ds = tf.data.Dataset.from_tensor_slices((dict(dataframe), labels))\n",
-        "    ds = ds.shuffle(buffer_size=len(dataframe))\n",
+        "def dataframe_to_dataset(dataframe, shuffle=True, batch_size=32):\n",
+        "    df = dataframe.copy()\n",
+        "    labels = df.pop(\"target\")\n",
+        "    ds = tf.data.Dataset.from_tensor_slices((dict(df), labels))\n",
+        "    if shuffle:\n",
+        "        ds = ds.shuffle(buffer_size=len(dataframe))\n",
+        "    ds = ds.batch(batch_size)\n",
+        "    df = ds.prefetch(batch_size)\n",
         "    return ds"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Next, we test our function\n",
+        "\n",
+        "- We use a small batch size to keep the output readable"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2022-04-29 09:00:24.806927: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+          ]
+        }
+      ],
+      "source": [
+        "batch_size = 5\n",
+        "\n",
+        "ds_train_test = dataframe_to_dataset(df_train, shuffle=True, batch_size=batch_size)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Let's take a look at the data:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Every feature: ['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach', 'exang', 'oldpeak', 'slope', 'ca', 'thal']\n",
+            "A batch of ages: tf.Tensor([35 55 35 62 52], shape=(5,), dtype=int64)\n",
+            "A batch of targets: tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int64)\n"
+          ]
+        }
+      ],
+      "source": [
+        "[(train_features, label_batch)] = ds_train_test.take(1)\n",
+        "\n",
+        "print('Every feature:', list(train_features.keys()))\n",
+        "print('A batch of ages:', train_features['age'])\n",
+        "print('A batch of targets:', label_batch )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- As the output demonstrates, the training set returns a dictionary of column names (from the DataFrame) that map to column values from rows."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Let's now create a new input pipeline with a larger batch size:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
       "outputs": [],
       "source": [
         "# Use function\n",
-        "train_ds = dataframe_to_dataset(train_dataframe)\n",
-        "val_ds = dataframe_to_dataset(val_dataframe)"
+        "batch_size = 32\n",
+        "\n",
+        "ds_train = dataframe_to_dataset(df_train, shuffle=True, batch_size=batch_size)\n",
+        "ds_val = dataframe_to_dataset(df_val, shuffle=True, batch_size=batch_size)"
       ]
     },
     {
@@ -550,30 +656,6 @@
       "source": [
         "Each `Dataset` yields a tuple `(input, target)` where `input` is a dictionary of features\n",
         "and `target` is the value `0` or `1`:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "GOj1-dsZb_vr"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Input: {'age': <tf.Tensor: shape=(), dtype=int64, numpy=57>, 'sex': <tf.Tensor: shape=(), dtype=int64, numpy=1>, 'cp': <tf.Tensor: shape=(), dtype=int64, numpy=4>, 'trestbps': <tf.Tensor: shape=(), dtype=int64, numpy=140>, 'chol': <tf.Tensor: shape=(), dtype=int64, numpy=192>, 'fbs': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'restecg': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'thalach': <tf.Tensor: shape=(), dtype=int64, numpy=148>, 'exang': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'oldpeak': <tf.Tensor: shape=(), dtype=float64, numpy=0.4>, 'slope': <tf.Tensor: shape=(), dtype=int64, numpy=2>, 'ca': <tf.Tensor: shape=(), dtype=int64, numpy=0>, 'thal': <tf.Tensor: shape=(), dtype=string, numpy=b'fixed'>}\n",
-            "--------------------------------------------------\n",
-            "Target: tf.Tensor(0, shape=(), dtype=int64)\n"
-          ]
-        }
-      ],
-      "source": [
-        "for x, y in train_ds.take(1):\n",
-        "    print(\"Input:\", x)\n",
-        "    print(50*\"-\")    \n",
-        "    print(\"Target:\", y)"
       ]
     },
     {
@@ -594,34 +676,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "id": "Ccngwlq_b_vr"
       },
       "outputs": [],
       "source": [
-        "train_ds = train_ds.batch(32)\n",
-        "val_ds = val_ds.batch(32)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<BatchDataset shapes: ({age: (None,), sex: (None,), cp: (None,), trestbps: (None,), chol: (None,), fbs: (None,), restecg: (None,), thalach: (None,), exang: (None,), oldpeak: (None,), slope: (None,), ca: (None,), thal: (None,)}, (None,)), types: ({age: tf.int64, sex: tf.int64, cp: tf.int64, trestbps: tf.int64, chol: tf.int64, fbs: tf.int64, restecg: tf.int64, thalach: tf.int64, exang: tf.int64, oldpeak: tf.float64, slope: tf.int64, ca: tf.int64, thal: tf.string}, tf.int64)>"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "train_ds"
+        "train_ds = ds_train.batch(32)\n",
+        "val_ds = ds_val.batch(32)"
       ]
     },
     {
