--- a/docs/structured_data_classification_functions.ipynb
+++ b/docs/structured_data_classification_functions.ipynb
@@ -1119,7 +1119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1132,28 +1132,22 @@
         "id": "jRUwMs6jb_vv"
       },
       "source": [
-        "- To get a prediction for a new sample, you can simply call the Keras Model.predict method.\n",
+        "- To get a prediction for a new sample, you can simply call the Keras `Model.predict` method.\n",
+        "\n",
         "- There are just two things you need to do:\n",
         "\n",
         "  - Wrap scalars into a list so as to have a batch dimension (Models only process batches of data, not single samples).\n",
-        "  - Call tf.convert_to_tensor on each feature."
+        "\n",
+        "  - Call `tf.convert_to_tensor` on each feature."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 37,
       "metadata": {
         "id": "UV7e_9K2b_vw"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "This particular patient had a 45.2 percent probability of having a heart disease, as evaluated by our model.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "sample = {\n",
         "    \"age\": 60,\n",
@@ -1169,12 +1163,42 @@
         "    \"slope\": 3,\n",
         "    \"ca\": 0,\n",
         "    \"thal\": \"fixed\",\n",
-        "}\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
-        "input_dict = {name: tf.convert_to_tensor([value]) for name, value in sample.items()}\n",
-        "\n",
-        "predictions = reloaded_model.predict(input_dict)\n",
-        "\n",
+        "input_dict = {name: tf.convert_to_tensor([value]) for name, value in sample.items()}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "predictions = reloaded_model.predict(input_dict)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "This particular patient had a 36.3 percent probability of having a heart disease, as evaluated by our model.\n"
+          ]
+        }
+      ],
+      "source": [
         "print(\n",
         "    \"This particular patient had a %.1f percent probability \"\n",
         "    \"of having a heart disease, as evaluated by our model.\" % (100 * predictions[0][0],)\n",
