--- a/docs/structured_data_classification_functions.ipynb
+++ b/docs/structured_data_classification_functions.ipynb
@@ -737,7 +737,7 @@
     }
    },
    "source": [
-    "- Next, we use our function to create bateches of tensors woth size 32"
+    "- Next, we use our function to create batches of tensors with size 32"
    ]
   },
   {
