--- a/docs/structured_data_classification_intro.ipynb
+++ b/docs/structured_data_classification_intro.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Structured data classification I\n",
+    "# Classification I\n",
     "\n",
     "*This tutorial is mainly based on the Keras tutorial [\"Structured data classification from scratch\"](https://keras.io/examples/structured_data/structured_data_classification_from_scratch/) by François Chollet.*"
    ]
@@ -1782,7 +1782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
