--- a/docs/keras-time-tutorial.ipynb
+++ b/docs/keras-time-tutorial.ipynb
@@ -15,10 +15,9 @@
         "id": "aFMC69ceO5S6"
       },
       "source": [
-        "This is a companion notebook for the book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff) provided by Francois Chollet. \n",
+        "- This is a companion notebook for the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff). \n",
         "\n",
-        "The exact formulation of the problem will be as follows: given data covering the previous\n",
-        "five days and sampled once per hour, can we predict the temperature in 24 hours?"
+        "- Problem statement: Given data covering the previous five days and sampled once per hour, can we predict the temperature in 24 hours?"
       ]
     },
     {
@@ -721,7 +720,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- We use a callback to save the bestperforming model"
+        "- We use a callback to save the bestperforming model\n",
+        "- And the EarlyStopping callback to interrupt training when the validation loss is not longer improving."
       ]
     },
     {
@@ -732,7 +732,8 @@
       "source": [
         "callbacks = [\n",
         "    keras.callbacks.ModelCheckpoint(\"jena_dense.keras\",\n",
-        "                                    save_best_only=True)\n",
+        "                                    save_best_only=True),\n",
+        "    keras.callbacks.EarlyStopping(monitor=\"val_loss\", min_delta=0, patience=5)\n",
         "]"
       ]
     },
@@ -844,18 +845,31 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "loss = history.history[\"mae\"]\n",
-        "val_loss = history.history[\"val_mae\"]\n",
-        "epochs = range(1, len(loss) + 1)\n",
+        "def visualize_mae(history, title):\n",
+        "    loss = history.history[\"mae\"]\n",
+        "    val_loss = history.history[\"val_mae\"]\n",
+        "    epochs = range(1, len(loss) + 1)\n",
         "\n",
-        "plt.figure()\n",
+        "    plt.figure()\n",
         "\n",
-        "plt.plot(epochs, loss, \"bo\", label=\"Training MAE\")\n",
-        "plt.plot(epochs, val_loss, \"b\", label=\"Validation MAE\")\n",
+        "    plt.plot(epochs, loss, \"b\", label=\"Training MAE\")\n",
+        "    plt.plot(epochs, val_loss, \"r\", label=\"Validation MAE\")\n",
         "\n",
-        "plt.title(\"Training and validation MAE\")\n",
-        "plt.legend()\n",
-        "plt.show()"
+        "    plt.title(title)\n",
+        "    plt.axhline(y=2.62, color='k', linestyle='--', label='Baseline')\n",
+        "    plt.xlabel(\"Epochs\")\n",
+        "    plt.ylabel(\"Mean absolute error\")\n",
+        "    plt.legend()\n",
+        "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "visualize_mae(history, \"Training and Validation MAE\")"
       ]
     },
     {
@@ -1005,6 +1019,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "visualize_mae(history, \"Training and Validation MAE\")"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1146,6 +1169,15 @@
         "model = keras.models.load_model(\"jena_lstm.keras\")\n",
         "\n",
         "print(f\"Test MAE: {model.evaluate(test_dataset)[1]:.2f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "visualize_mae(history, \"Training and Validation MAE\")"
       ]
     },
     {
@@ -1551,20 +1583,7 @@
         }
       ],
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "loss = history.history[\"mae\"]\n",
-        "val_loss = history.history[\"val_mae\"]\n",
-        "epochs = range(1, len(loss) + 1)\n",
-        "\n",
-        "plt.figure()\n",
-        "\n",
-        "plt.plot(epochs, loss, \"bo\", label=\"Training MAE\")\n",
-        "plt.plot(epochs, val_loss, \"b\", label=\"Validation MAE\")\n",
-        "\n",
-        "plt.title(\"Training and validation MAE\")\n",
-        "plt.legend()\n",
-        "plt.show()"
+        "visualize_mae(history, \"Training and Validation MAE\")"
       ]
     },
     {
@@ -1695,6 +1714,15 @@
       "source": [
         "model = keras.models.load_model(\"jena_stacked_gru_dropout.keras\")\n",
         "print(f\"Test MAE: {model.evaluate(test_dataset)[1]:.2f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "visualize_mae(history, \"Training and Validation MAE\")"
       ]
     },
     {
